--- a/404.html
+++ b/404.html
@@ -8,13 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="keywords" content="PubhD, Dublin, Science, Research">
 <meta name="description" content="">
-<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-<link rel="stylesheet" type="text/css" media="screen" href="/css/normalize.css" />
-<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css" />
-<link rel="stylesheet" type="text/css" media="screen" href="/css/all.css" /><link rel="stylesheet" href="/css/katex.css" crossorigin="anonymous">
-<script defer src="/js/katex.js"  integrity="sha384-HELAAZU8xvHgfT/8z4Mhmu+E2z3oBrMEuywaMh/CEd5uTZIDSct7TEaX+S43+dOi" crossorigin="anonymous"></script>
-<script defer src="/js/auto-render.js" integrity="sha384-0QrOZ8WIARJUoT5pH7Iuzi7iq0mXUXLF9yj5ZvYxTkMRv1zcaPQiOQ9ksHYbKw7M" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
+<link rel="icon" type="image/png" href="/www.pubhd.ie/favicon-32x32.png" sizes="32x32">
+<link rel="icon" type="image/png" href="/www.pubhd.ie/favicon-16x16.png" sizes="16x16">
+<link rel="stylesheet" type="text/css" media="screen" href="/www.pubhd.ie/css/normalize.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="/www.pubhd.ie/css/main.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="/www.pubhd.ie/css/all.css" /><link rel="stylesheet" href="/www.pubhd.ie/css/katex.css" crossorigin="anonymous">
+<script defer src="/www.pubhd.ie/js/katex.js"  integrity="sha384-HELAAZU8xvHgfT/8z4Mhmu+E2z3oBrMEuywaMh/CEd5uTZIDSct7TEaX+S43+dOi" crossorigin="anonymous"></script>
+<script defer src="/www.pubhd.ie/js/auto-render.js" integrity="sha384-0QrOZ8WIARJUoT5pH7Iuzi7iq0mXUXLF9yj5ZvYxTkMRv1zcaPQiOQ9ksHYbKw7M" crossorigin="anonymous" onload="renderMathInElement(document.body);"></script>
 <script>
 document.addEventListener("DOMContentLoaded", function() { renderMathInElement(document.body, { delimiters: [ {left: "$$", right: "$$", display: true}, {left: "$", right: "$", display: false} ] }); });
 </script>
@@ -25,7 +25,7 @@ document.addEventListener("DOMContentLoaded", function() { renderMathInElement(d
 <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="A monthly event to all those interested in science" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://pubhd.ie/404.html" />
+<meta property="og:url" content="www.pubhd.ie/404.html" />
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
@@ -37,10 +37,10 @@ document.addEventListener("DOMContentLoaded", function() { renderMathInElement(d
 <body>
 <header>
 <div id="avatar">
-<a href="http://pubhd.ie/"><img src="/img/logo.png" alt="Dublin PubhD"></a>
+<a href="www.pubhd.ie"><img src="/www.pubhd.ie/img/logo.png" alt="Dublin PubhD"></a>
 </div>
 <div id="titletext">
-<h2 id="title"><a href="http://pubhd.ie/">Dublin PubhD</a></h2>
+<h2 id="title"><a href="www.pubhd.ie">Dublin PubhD</a></h2>
 </div>
 <div id="title-description">
 <p id="subtitle">A monthly event to all those interested in science</p>
@@ -55,11 +55,11 @@ document.addEventListener("DOMContentLoaded", function() { renderMathInElement(d
 <div id="mainmenu">
 <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="/post">All Posts</a></li>
-<li><a href="/about">About</a></li>
-<li><a href="/tags">Tags</a></li>
-<li><a href="/categories">Categories</a></li>
+<li><a href="www.pubhd.ie/">Home</a></li>
+<li><a href="www.pubhd.ie/post">All Posts</a></li>
+<li><a href="www.pubhd.ie/about">About</a></li>
+<li><a href="www.pubhd.ie/tags">Tags</a></li>
+<li><a href="www.pubhd.ie/categories">Categories</a></li>
 </ul>
 </nav>
 </div>
@@ -70,7 +70,7 @@ document.addEventListener("DOMContentLoaded", function() { renderMathInElement(d
 </main>
 <footer>
 © Copyright notice | <a href="https://github.com/dataCobra/hugo-vitae" target="_blank">Vitae</a> theme for <a href="https://gohugo.io" target="_blank">Hugo</a>
-</footer><script src="/js/dark-mode.js"></script>
+</footer><script src="/www.pubhd.ie/js/dark-mode.js"></script>
 
 </body>
 </html>
