--- a/about/index.html
+++ b/about/index.html
@@ -45,10 +45,10 @@ Organizers ">
 <body>
 <header>
 <div id="avatar">
-<a href="www.pubhd.ie"><img src="/www.pubhd.ie/img/logo.png" alt="Dublin PubhD"></a>
+<a href="www.pubhd.ie/"><img src="/www.pubhd.ie/img/logo.png" alt="Dublin PubhD"></a>
 </div>
 <div id="titletext">
-<h2 id="title"><a href="www.pubhd.ie">Dublin PubhD</a></h2>
+<h2 id="title"><a href="www.pubhd.ie/">Dublin PubhD</a></h2>
 </div>
 <div id="title-description">
 <p id="subtitle">A monthly event to all those interested in science</p>
