--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@ document.addEventListener("DOMContentLoaded", function() { renderMathInElement(d
 <body>
 <header>
 <div id="avatar">
-<a href="www.pubhd.ie"><img src="/www.pubhd.ie/img/logo.png" alt="Dublin PubhD"></a>
+<a href="www.pubhd.ie/"><img src="/www.pubhd.ie/img/logo.png" alt="Dublin PubhD"></a>
 </div>
 <div id="titletext">
-<h1 id="title"><a href="www.pubhd.ie">Dublin PubhD</a></h1>
+<h1 id="title"><a href="www.pubhd.ie/">Dublin PubhD</a></h1>
 </div>
 <div id="title-description">
 <p id="subtitle">A monthly event to all those interested in science</p>
